Still a search bug
Search results are added to the first page and not showing 10 per page,
however the pagination works just fine.

--- a/css/design.css
+++ b/css/design.css
@@ -118,5 +118,15 @@ body{
       color: #fff;
     }
 .no-matches {
-  color: red;
+    color: red;
+}
+.sticky {
+    margin: 50px auto;
+    position: fixed;
+    width: 70%;
+    height: 100px;
+    background: linear-gradient(#708090, transparent 90%);
+    border-radius: 0 0 10px 10px;
+    overflow: inherit;
+
 }
